metadata/objects/Interviewer_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Feedback__c</fullName>
        <label>Additional Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Creativity__c</fullName>
        <label>Creativity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personality_Fit__c</fullName>
        <label>Personality Fit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professionalism__c</fullName>
        <label>Professionalism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_gives_you_concerns_about_this_hire__c</fullName>
        <label>What gives you concerns about this hire?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_best_reason_to_hire_them__c</fullName>
        <label>What is the best reason to hire them?</label>
        <type>TextArea</type>
    </fields>
    <label>Interviewer Feedback</label>
    <nameField>
        <displayFormat>Feedback-{0000}</displayFormat>
        <label>Interviewer Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviewer Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>